--- a/assets/css/index2.css
+++ b/assets/css/index2.css
@@ -285,6 +285,35 @@ form {
     text-decoration: none !important;
   }
 }
+
+.img {
+  margin-top: 10%;
+}
+
+.a {
+  position: relative;
+  position: absolute;
+  height: 50%;
+  width: 100%;
+}
+
+.b {
+  width: 100%;
+  height: 50%;
+  position: fixed;
+}
+
+.main-navabar {
+  justify-content: space-between;
+}
+
+#sign_up {
+  text-align: center !important;
+  width: 128px !important;
+}
+.form-container{
+  height: 511px !important;
+}
 @media only screen and (max-width: 600px) {
   .background_image {
     margin-bottom: 500px;
