--- a/assets/css/index2.css
+++ b/assets/css/index2.css
@@ -34,34 +34,7 @@ main {
     background-size: 100%;
   }
 }
-@media only screen and (max-width: 768px) {
-  .background-image {
-    .curve-vector {
-      display: block;
-      position: absolute;
-      width: 116%;
-      height: 22%;
-      top: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      background-size: 100%;
-    }
-  }
-  .form-container {
-    margin: 0 !important;
-    margin-left: 10px !important;
-    margin-right: 10px !important;
-    min-width: 330px;
-    max-width: 450px;
-    width: auto !important;
-  }
 
-  .footer {
-    max-width: 335px;
-    margin: 0 auto;
-    margin-bottom: 10px;
-  }
-}
 header {
   /* margin-top: 30px; */
   height: 20vh;
@@ -314,6 +287,37 @@ form {
 .form-container{
   height: 511px !important;
 }
+.footer_images{
+  gap: 10px;
+}
+@media only screen and (max-width: 768px) {
+  .background-image {
+    .curve-vector {
+      display: block;
+      position: absolute;
+      width: 116%;
+      height: 22%;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      background-size: 100%;
+    }
+  }
+  .form-container {
+    margin: 0 !important;
+    margin-left: 10px !important;
+    margin-right: 10px !important;
+    min-width: 330px;
+    max-width: 450px;
+    width: auto !important;
+  }
+
+  .footer {
+    max-width: 335px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+  }
+}
 @media only screen and (max-width: 600px) {
   .background_image {
     margin-bottom: 500px;
@@ -341,10 +345,3 @@ form {
   }
 }
 
-/* @media only screen and (max-width: 1800px) {
-.form-container{       
-margin-bottom: auto;
-justify-content: center;
-text-align: center;
-
-  } */
