--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -14,14 +14,12 @@
     --btn_b : #000000;
     --btn_g : #808080;
     --btn_w : #ffffff;
-<<<<<<< HEAD
-    --calender: #faf2f2;
-=======
+    --button_primary_bg_color :  #544DC9;
+    --button_primary_text_color :  white;
     
-    //sidebar
+    /* sidebar */
     --sidebar_nav_active_bg_color:#E5E4FC;
     --sidebar_nav_active_text_color:#544DC9;
->>>>>>> 7b273c58c778399a220d286f994066922db92c94
   }
 
 
