--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -6,12 +6,23 @@
     --black: #000000;
     --gray: #808080;
     --white: #ffffff;
+    /* primary button */
+    --button-primary-bg-color: #5F55EE;
+    --button-primary-text-color: white;
     /* siderbar */
     --sidebar_nav_active_bg: #E5E4FC;
     --sidebar_nav_active_text_color: #544DC9;
     --sidebar_nav_inactive_text_color: #2A2E34;
+    /* navbar */
+    --navbar_background_color: #323452;
+    --navbar_text_color: white;
+    --navbar-search-bg-color:#FFFFFF1A;
+    --navbar-ask-ai-bg-color:#43418D !important;
 }
-
+.btn.primary{
+    background-color: var(--button-primary-bg-color);
+    color: var(--button-primary-text-color);
+}
 body {
     overflow-y: hidden
 }
@@ -154,6 +165,25 @@ body {
     }
 }
 
+.navbar {
+    .search-button {
+        height: 34px;
+        border-radius: 6px;
+        width: 450px;
+        background: var(--navbar-search-bg-color);
+        color: var(--navbar_text_color);
+        opacity: 0.80;
+        border: 0;
+    }
+    .ask-ai{
+        height: 34px;
+        padding: 7px;
+        border-radius: 6px;
+        color:var(--navbar_text_color);
+        background-color: var(--navbar-ask-ai-bg-color);
+    }
+}
+
 .sidebarnew.inactive {
     max-width: 60px;
     min-width: 60px;
@@ -168,7 +198,6 @@ body {
             margin: 5px 0px;
         }
     }
-
 }
 
 .nav_2_one {
@@ -367,9 +396,15 @@ body {
 }
 
 .h_nav_end button {
-    background-color: var(--gray);
+    background-color: transparent;
     /* padding: 5px; */
     border: none;
+    color: var(--navbar_text_color);
+
+    span {
+        color: var(--navbar_text_color);
+
+    }
 }
 
 
@@ -761,7 +796,7 @@ body {
 
 
 #one_box {
-    border: 1px solid var(--yellow);
+    border: 1px solid #D6D9DE;
     border-radius: 10px;
     height: 400px;
     /* overflow: hidden; */
@@ -829,9 +864,10 @@ body {
 #box-eight,
 #box-nine,
 #box-ten {
-    border: 1px solid var(--yellow);
+    border: 1px solid #D6D9DE;
     border-radius: 10px;
     height: 600px;
+    box-shadow: 0px 1px 4px 0px #0000000A;
 }
 
 #box-two {
@@ -903,7 +939,7 @@ body {
 
 .navbar {
 
-    background: var(--gray) !important;
+    background: var(--navbar_background_color) !important;
 }
 
 .h_main_profile {
