--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1008,8 +1008,45 @@ body {
 }
 
 
+.calendar{
+    gap: 20px;
+}
+.vertical_row{
+    width: 100%;
+border: 1px solid;
+margin-left: 16px;
+}
+.calendar_time{
+    height: 550px;
+overflow-y: scroll;
+}
+.calendar_button{
+    display: flex;
+    width: 100%;
+    height: 60px;
+    flex-direction: column;
+    border: 1px solid var(--gray);
+    
+}
+.calendar_one_button,.calendar_two_button{
+    height: 30px;
+    background-color: var(--white);
+}
+.calendar_one_button:hover,.calendar_two_button:hover{
+background-color:var(--calender);
 
+}
 
+.active_calender_button{
+    width: 39vw;
+    height: 5px;
+    background-color:var(--yellow);
+}
+.active_calender span{
+
+    background-color:var(--yellow);
+    padding: 5px;
+} 
 .h_sidebar_proend {
     display: flex;
     justify-content: space-between !important;
