--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -36,10 +36,10 @@
   --notepad_nav_bg_color:yellow;
   --notepad_nav_text_color:rgb(255, 255, 255);
 
-  /* switch button */
-  --button_switch_bg_color: rgb(202, 138, 138);
-  /* switch active button */
-  --button_switch_active_bg_color: rgb(41, 172, 15);
+  /* switch & checkbox button */
+  --button_switch_bg_color: rgb(255, 255, 255);
+  /* switch & checkbox active button */
+  --button_switch_active_bg_color:  #544dc9;
   /* sidebar */
   --sidebar_nav_active_bg_color: #e5e4fc;
   --sidebar_nav_active_text_color: #544dc9;
@@ -66,4 +66,15 @@
   --navbar_text_color: white;
   --navbar-search-bg-color: #ffffff1a;
   --navbar-ask-ai-bg-color: #43418d !important;
+  /* modal Brain */
+  --button_bg_color:rgba(242, 241, 254, 1);
+  --button_border_color:rgba(204, 201, 250, 1);
+  --button_text_color:rgba(84, 77, 201, 1);
+  --button_active_bg_color:rgba(253, 243, 236, 1);
+  --button_active_border_color:rgba(245, 208, 180, 1);
+  --button_active_text_color:rgba(188, 95, 28, 1);
+  /* modal update */
+  --background_color_modal: rgba(247, 248, 249, 1);
+  --text_color_modal: rgba(79, 87, 98, 1);
+
 }
